# Polynomial-Fitter

./: Makefile  README.md  data.xlsx  pyproject.toml
src/: main.py  plot_show.py  utils.py  version.py
src/assets/: template.html
template/: data-origin.xlsx
tools/: config.py  pack.py  utils.py
