[project]
name = "polynomial-fitter"
version = "0.1.0"
description = "Polynomial-Fitter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pygal>=3.0.5",
    "rich>=14.0.0",
    "rich-argparse>=1.7.1",
    "scipy>=1.16.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[dependency-groups]
dev = [
    "pyinstaller>=6.14.2",
]
