[project]
name = "polynomial-fitter"
dynamic = ["version"]
description = "Polynomial-Fitter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pygal>=3.0.5",
    "rich>=14.0.0",
    "rich-argparse>=1.7.1",
    "scipy>=1.16.0",
]

[project.urls]
"Homepage" = "https://github.com/YanMing-lxb/Polynomial-Fitter"
"Bug Tracker" = "https://github.com/YanMing-lxb/Polynomial-Fitter/issues"

[project.scripts]
polyfit = "src.main:main"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[dependency-groups]
dev = [
    "pyinstaller>=6.14.2",
]

[tool.setuptools.dynamic]
version = {attr = "src.version.__version__"}